--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
                     <h3>Lab 3</h3>
                     <p>Interatividade com JS</p>
                 </a>
+
+                <a class="card" href="/lab4/index.html" target="_blank">
+                    <h3>Lab 4</h3>
+                    <p>JavaScript</p>
+                </a>
             </div>
         </section>
 
