--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
                     <h3>Lab 4</h3>
                     <p>JavaScript</p>
                 </a>
+
+                <a class="card" href="/lab5/index.html" target="_blank">
+                    <h3>Lab 5</h3>
+                    <p>JavaScript Part 2</p>
+                </a>
             </div>
         </section>
 
