--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
                     <h3>Lab 5</h3>
                     <p>JavaScript Part 2</p>
                 </a>
+
+                <a class="card" href="/lab6/index.html" target="_blank">
+                    <h3>Lab 6</h3>
+                    <p>Loja</p>
+                </a>
             </div>
         </section>
 
