--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
                     <h3>Lab 6</h3>
                     <p>Loja</p>
                 </a>
+
+                <a class="card" href="/lab7/index.html" target="_blank">
+                    <h3>Lab 7</h3>
+                    <p>Loja Part 2</p>
+                </a>
             </div>
         </section>
 
